updated jaocao cofigurations